[project]
name = "anything-to-md"
version = "0.1.0"
description = "Convert any file to LLM-ready Markdown - MCP Server + Claude Code Skill"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Anything-to-MD Team"}
]
keywords = ["markdown", "mcp", "llm", "document-converter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "markitdown[all]>=0.0.1",
    "yt-dlp>=2024.1.1",
    "rich>=13.0.0",
    "pathspec>=0.12.0",
]

[project.optional-dependencies]
# PDF 增强支持（MinerU）
pdf = [
    "magic-pdf[full]>=0.6.0",
]

# 视频处理支持
video = [
    "rapidocr-onnxruntime>=1.3.0",
    "faster-whisper>=1.0.0",
    "scenedetect[opencv]>=0.6.0",
    "imagehash>=4.3.0",
    "Pillow>=10.0.0",
]

# 完整安装（所有功能）
full = [
    "anything-to-md[pdf,video]",
]

# 开发工具
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
anything-to-md = "anything_to_md.cli:main"
anything-to-md-mcp = "anything_to_md.mcp_server:main"

[project.entry-points."mcp.servers"]
anything-to-md = "anything_to_md.mcp_server:create_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anything_to_md"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
